--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9KnbakTaRFsSdPC6snJOa",
+      "authorship_tag": "ABX9TyM/6SI2+kreJssDwwUQXllV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "id": "H8vW5Ekp50pd",
         "outputId": "d801b12d-3151-497d-fc90-1c2b6cb8260b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,6 +124,7 @@
         "outputId": "64c5d21e-18bd-4d45-d0ce-58dc3c08b404"
       },
       "source": [
+        "# to find determinant of matrix with usnig numpy\n",
         "import numpy as np\n",
         "\n",
         "# Define the 3x3 matrix as a list of lists\n",
@@ -146,7 +147,7 @@
         "# Print the determinant\n",
         "print(f\"\\nDeterminant of the matrix: {determinant}\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +186,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# To find determinant of matrix manually\n",
+        "# To find inverse of matrix manually\n",
         "\n",
         "# store the matrix element in individual variables\n",
         "\n",
@@ -229,7 +230,7 @@
         "outputId": "955a5025-ce87-40b2-9619-11b23fb0fea8",
         "id": "uXfqGwtlAFym"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,6 +286,7 @@
         "outputId": "46e02d7a-945e-4505-b91b-89c2133fc639"
       },
       "source": [
+        "# to find inverse of matrix with using numpy\n",
         "import numpy as np\n",
         "\n",
         "# Define the 3x3 matrix as a list of lists\n",
@@ -317,7 +319,7 @@
         "    print(\"\\nInverse Matrix:\")\n",
         "    print(inverse_matrix)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,6 +339,137 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to slove euations manually\n",
+        "# Coefficients of equations\n",
+        "a = 2   # coefficient of x in eq1\n",
+        "b = 3   # coefficient of y in eq1\n",
+        "c = 10  # constant in eq1\n",
+        "\n",
+        "d = 4   # coefficient of x in eq2\n",
+        "e = 5   # coefficient of y in eq2\n",
+        "f = 20  # constant in eq2\n",
+        "\n",
+        "print(\"Equations:\")\n",
+        "print(a, \"x +\", b, \"y =\", c)\n",
+        "print(d, \"x +\", e, \"y =\", f)\n",
+        "\n",
+        "# Elimination method\n",
+        "# Make coefficients of x equal\n",
+        "a1 = a * 2\n",
+        "b1 = b * 2\n",
+        "c1 = c * 2\n",
+        "\n",
+        "# Subtract second equation\n",
+        "y = (c1 - f) / (b1 - e)\n",
+        "\n",
+        "# Substitute y to find x\n",
+        "x = (c - b*y) / a\n",
+        "\n",
+        "print(\"\\nSolution:\")\n",
+        "print(\"x =\", x)\n",
+        "print(\"y =\", y)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nu0bbJnuop1R",
+        "outputId": "0ab9805a-d5dd-4a8d-839f-78606b924d08"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Equations:\n",
+            "2 x + 3 y = 10\n",
+            "4 x + 5 y = 20\n",
+            "\n",
+            "Solution:\n",
+            "x = 5.0\n",
+            "y = 0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to solve equtions with using numpy\n",
+        "import numpy as np\n",
+        "\n",
+        "# Equation 1: 2x + 3y = 10\n",
+        "# Equation 2: 4x + 5y = 20\n",
+        "\n",
+        "# Coefficients matrix A\n",
+        "A = np.array([\n",
+        "    [2, 3],\n",
+        "    [4, 5]\n",
+        "])\n",
+        "\n",
+        "# Constants vector B\n",
+        "B = np.array([10, 20])\n",
+        "\n",
+        "print(\"Equations:\")\n",
+        "print(f\"{A[0,0]}x + {A[0,1]}y = {B[0]}\")\n",
+        "print(f\"{A[1,0]}x + {A[1,1]}y = {B[1]}\")\n",
+        "\n",
+        "# Elimination Method\n",
+        "\n",
+        "# Eliminate x: multiply first equation by 2 and subtract from second\n",
+        "multiplier = A[1,0] / A[0,0] # 4 / 2 = 2\n",
+        "\n",
+        "# New coefficient and constant for y from the second equation\n",
+        "coeff_y_new = A[1,1] - (A[0,1] * multiplier)\n",
+        "const_new = B[1] - (B[0] * multiplier)\n",
+        "\n",
+        "# Solve for y\n",
+        "y = const_new / coeff_y_new\n",
+        "\n",
+        "# Substitute y back into the first equation to solve for x\n",
+        "x = (B[0] - A[0,1] * y) / A[0,0]\n",
+        "\n",
+        "print(\"\\nSolution:\")\n",
+        "print(f\"x = {x}\")\n",
+        "print(f\"y = {y}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPXaln8Xv_sU",
+        "outputId": "5961237b-d80c-4b05-e53e-6a396c74db63"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Equations:\n",
+            "2x + 3y = 10\n",
+            "4x + 5y = 20\n",
+            "\n",
+            "Solution:\n",
+            "x = 5.0\n",
+            "y = -0.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FvMkQ_4tyKp5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
